feat: finish integration test to auth user